force-app/main/default/objects/Config_CAA__c/Config_CAA__c.object-meta.xml
<CustomObject>
    <description>3</description>
    <label>Config CAA</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Config CAA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>