force-app/main/default/objects/Config_CAA__c/fields/Exp_Non_Appeal__c.field-meta.xml
<CustomField>
    <fullName>Exp_Non_Appeal__c</fullName>
    <description>3</description>
    <label>Exp_Non_Appeal</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>