force-app/main/default/objects/Config_CAA__c/fields/Is_Appeal__c.field-meta.xml
<CustomField>
    <fullName>Is_Appeal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>3</description>
    <label>Is_Appeal</label>
    <type>Checkbox</type>
</CustomField>