force-app/main/default/objects/Config_CAA__c/fields/PIC_Approval__c.field-meta.xml
<CustomField>
    <fullName>PIC_Approval__c</fullName>
    <description>3</description>
    <label>PIC Approval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>