force-app/main/default/objects/Config_CAA__c/fields/Rules__c.field-meta.xml
<CustomField>
    <fullName>Rules__c</fullName>
    <description>3</description>
    <label>Rules</label>
    <length>255</length>
    <type>Text</type>
</CustomField>