force-app/main/default/objects/Config_CAA__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Scheme__c</columns>
    <columns>Level__c</columns>
    <columns>PIC_Approval__c</columns>
    <columns>Is_Recommend__c</columns>
    <columns>Is_Approver_Final__c</columns>
    <columns>Is_Reject_not_Final__c</columns>
    <columns>Is_Reject_Final__c</columns>
    <columns>Is_Appeal__c</columns>
    <columns>Exp_Non_Appeal__c</columns>
    <columns>Exp_Appeal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>